# thirdparty

./: .gitignore  README.md
FreeImage/linux/: NAP_NOTES.txt
FreeImage/osx/: Makefile.osx  NAP_NOTES.txt
SDL2/: Dockerfile
SDL2/linux/: NAP_NOTES.txt
SDL2/osx/: NAP_NOTES.txt
SPIRV-Reflect/msvc64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  spirv-reflect.sln  (+2 more)
SPIRV-cross/: Dockerfile  make_install.bat  make_install_linux.sh  make_install_macos.sh
assimp/: Dockerfile
cryptopp/: Dockerfile
docker_images/: README.md
etherdream/: Dockerfile
etherdream/linux/source/: CMakeLists.txt
etherdream/linux/source/src/driver/libetherdream/: build_android.sh
ffmpeg/: README.txt
glslang/: CMakeLists.txt  Dockerfile  generateVSSolution.bat  make_install.bat  make_install_linux.sh  make_install_macos.sh  make_install_osx.sh
libartnet/android/: CMakeLists.txt  NAP_NOTES.txt  build_android.py
libsndfile/: Makefile  config.status  libtool
mpg123/: Dockerfile
opencv/: Dockerfile  docker-bake.hcl  linux_docker_wrapper  make_install_linux  make_install_linux.sh  make_install_macos  make_msvc.bat  make_xcode.sh
portaudio/: .gitignore  Dockerfile
rttr/: build.sh  build_linux.sh  build_osx.sh  build_windows.bat  generateVSSolution.bat  generateXCodeProject.sh
serial/: CMakeLists.txt
soem/: .gitignore  CMakeLists.txt  Dockerfile  generateVSSolution.bat
sqlite/: CMakeLists.txt  NAP_NOTES.txt
vulkansdk/: Dockerfile
(+685 files in other folders)
